trying to fix scroll lock and eth marketplace filtering on mobile

--- a/src/app/marketplace-left-bar/marketplace-left-bar.component.scss
+++ b/src/app/marketplace-left-bar/marketplace-left-bar.component.scss
@@ -54,33 +54,6 @@
     color: #1b1b1b;
   }
 }
-.mlb-flyout-status-grid-eth {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
-  button {
-    cursor: pointer;
-    width: 1fr;
-    //aspect-ratio: 1.5 / 1.3;
-    background-color: #ffffff;
-    color: #525252;
-    border: 1.1800000667572021px solid #aaaaaa;
-    border-radius: 7.866666793823242px;
-    font-size: clamp(14px, 4vw, 22px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    &:hover {
-      background-color: var(--secondary);
-    }
-  }
-  button.selected {
-    border: 3px solid #222222;
-    color: #1b1b1b;
-  }
-}
 .marketplace-filter-button {
   background-color: transparent;
   width: 100%;
@@ -294,38 +267,6 @@ input[type="number"]::-webkit-outer-spin-button {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  grid-gap: 10px;
-  button {
-    cursor: pointer;
-    //width: 83px;
-    //height: 68px;
-    position: relative;
-    width: 1fr;
-    padding-bottom: 75%;
-    background-color: #ffffff;
-    color: #525252;
-    border: 1.1800000667572021px solid #aaaaaa;
-    border-radius: 7.866666793823242px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    &:hover {
-      background-color: var(--secondary);
-    }
-  }
-  button.selected {
-    border: 3px solid #222222;
-    color: #1b1b1b;
-  }
-  img {
-    height: 20px;
-  }
-}
-.mlb-flyout-status-grid-eth {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
   button {
     cursor: pointer;
